crates/goat_semantic/tests/integration/snapshots/parenthesized_and_sequence_expr.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/parenthesized_and_sequence_expr.js
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	statement
	return
}

bb4: {

}

bb5: {

}

bb6: {
	statement
	return
}

bb7: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
ExpressionStatement
return" shape = box]
    4 [ label = "bb4" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6
ExpressionStatement
return" shape = box]
    7 [ label = "bb7" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 4 [ label="Normal"]
    6 -> 5 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 6 [ label="NewFunction"]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 7 [ label="Normal"]
}
