crates/goat_semantic/tests/integration/snapshots/spread_in_a_spread.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/spread_in_a_spread.js
---
bb0: {

}

bb1: {

}

bb2: {

}

bb3: {
	return <value>
}

bb4: {
	unreachable
}

bb5: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
return <value>" shape = box]
    4 [ label = "bb4
unreachable" shape = box]
    5 [ label = "bb5" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 4 [ label="Unreachable", style="dotted"]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 5 [ label="Normal"]
}
