crates/goat_semantic/tests/integration/snapshots/string.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/string.js
---
bb0: {

}

bb1: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
}
