crates/goat_semantic/tests/integration/snapshots/switch_in_while.snap
---
source: crates/goat_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/goat_semantic/tests/integration/cfg_fixtures/switch_in_while.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {
	condition
}

bb3: {
	statement
	statement
}

bb4: {
	condition
}

bb5: {
	statement
	continue
}

bb6: {
	unreachable
}

bb7: {
	condition
}

bb8: {
	statement
}

bb9: {

}

bb10: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
WhileStatement" shape = box]
    2 [ label = "bb2
Condition(IdentifierReference(a))" shape = box]
    3 [ label = "bb3
BlockStatement
SwitchStatement" shape = box]
    4 [ label = "bb4
Condition(0)" shape = box]
    5 [ label = "bb5
ExpressionStatement
continue" shape = box]
    6 [ label = "bb6
unreachable" shape = box]
    7 [ label = "bb7
Condition(1)" shape = box]
    8 [ label = "bb8
ExpressionStatement" shape = box]
    9 [ label = "bb9" shape = box]
    10 [ label = "bb10" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 5 [ label="Jump", color=green]
    6 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 6 [ label="Unreachable", style="dotted"]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    8 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 8 [ label="Jump", color=green]
    4 -> 7 [ label="Normal"]
    6 -> 7 [ label="Normal", style="dotted"]
    3 -> 4 [ label="Normal"]
    3 -> 7 [ label="Normal"]
    9 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    8 -> 9 [ label="Normal"]
    3 -> 9 [ label="Normal"]
    10 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 2 [ label="Normal"]
    2 -> 3 [ label="Jump", color=green]
    9 -> 2 [ label="Backedge", color=grey]
    2 -> 10 [ label="Normal"]
    5 -> 2 [ label="Jump", color=green]
}
